--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                
                 <div class="col-lg-6 about-image">
-                  <img src="images/skills4.png" alt="Your Picture">
+                  <img src="skills4.png" alt="Your Picture">
                 </div>
               </div>
             </div>
