--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark  navbar-custom bg-primary">
         <a class="navbar-brand" href="#">
-          <img src="images/newlogo.png" alt="Logo">
+          <img src="newlogo.png" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
              
             </div>
             <div class="col-md-6">
-              <img src="images/skills4.png" class="img-fluid about-img" alt="Your Image">
+              <img src="skills4.png" class="img-fluid about-img" alt="Your Image">
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
                     <div class="row">
                       <div class="col-lg-4 project-item">
                         <video controls class="project-video">
-                          <source src="images/Screen Recording 2024-07-13 204724.mp4" type="video/mp4">
+                          <source src="Screen Recording 2024-07-13 204724.mp4" type="video/mp4">
                           Your browser does not support the video tag.
                         </video>
                       </div>
@@ -120,7 +120,7 @@
                     <div class="row">
                       <div class="col-lg-4 project-item">
                         <video controls class="project-video">
-                          <source src="images/Screen Recording 2024-07-13 204901.mp4" type="video/mp4">
+                          <source src="Screen Recording 2024-07-13 204901.mp4" type="video/mp4">
                           Your browser does not support the video tag.
                         </video>
                       </div>
@@ -138,7 +138,7 @@
                     <div class="row">
                       <div class="col-lg-4 project-item">
                         <video controls class="project-video">
-                          <source src="images/Screen Recording 2024-07-13 204546.mp4" type="video/mp4">
+                          <source src="Screen Recording 2024-07-13 204546.mp4" type="video/mp4">
                           Your browser does not support the video tag.
                         </video>
                       </div>
